--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@ Maldonado-Torres (2007) habla de la colonialidad del ser como la forma en que la
 
 Como lo plantea Quijano (2000), el problema no es solo histórico, sino estructural, la colonialidad del poder organiza el presente, jerarquiza lo europeo como deseable, como lo mejor y convierte las huellas coloniales en atracción económica, Antigua es símbolo de cómo se celebra la herencia colonial sin cuestionarla, de cómo se comercializa la memoria sin repararla.
 
-El visitante admira sus iglesias sin saber que muchas fueron construidas sobre sitios sagrados indígenas, se toman fotos de los arcos coloniales sin preguntarse a quién se obligó a levantar esos muros, así, el turismo transforma el dolor en un atractivo más, y convierte el silencio en parte de la experiencia. Quiero aclarar que en mi opinión, el problema no es que Antigua sea bella, el problema es que su belleza se narra sin memoria crítica, sin contexto histórico, sin dignidad para quienes la habitaron primero.    <iframe width="560" height="315" src="https://www.youtube.com/embed/2yoJ0hNbCRI"
-title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+El visitante admira sus iglesias sin saber que muchas fueron construidas sobre sitios sagrados indígenas, se toman fotos de los arcos coloniales sin preguntarse a quién se obligó a levantar esos muros, así, el turismo transforma el dolor en un atractivo más, y convierte el silencio en parte de la experiencia. Quiero aclarar que en mi opinión, el problema no es que Antigua sea bella, el problema es que su belleza se narra sin memoria crítica, sin contexto histórico, sin dignidad para quienes la habitaron primero.   <p>Mirá este <a href="https://www.youtube.com/watch?v=2yoJ0hNbCRI" target="_blank">video documental</a> sobre cómo el turismo ha transformado Antigua Guatemala en una postal colonial para turistas.</p>
+
+
 
     <img src="08D4EA90-08C9-4064-AA3F-49BA9CA3D717.jpeg" alt="Calle colonial Antigua">
     <div class="caption">Fachadas coloniales que ocultan siglos de despojo y borramiento cultural.</div>
