--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@ Maldonado-Torres (2007) habla de la colonialidad del ser como la forma en que la
 
 Como lo plantea Quijano (2000), el problema no es solo histórico, sino estructural, la colonialidad del poder organiza el presente, jerarquiza lo europeo como deseable, como lo mejor y convierte las huellas coloniales en atracción económica, Antigua es símbolo de cómo se celebra la herencia colonial sin cuestionarla, de cómo se comercializa la memoria sin repararla.
 
-El visitante admira sus iglesias sin saber que muchas fueron construidas sobre sitios sagrados indígenas, se toman fotos de los arcos coloniales sin preguntarse a quién se obligó a levantar esos muros, así, el turismo transforma el dolor en un atractivo más, y convierte el silencio en parte de la experiencia. Quiero aclarar que en mi opinión, el problema no es que Antigua sea bella, el problema es que su belleza se narra sin memoria crítica, sin contexto histórico, sin dignidad para quienes la habitaron primero.   <p>Mirá este <a href="https://www.youtube.com/watch?v=2yoJ0hNbCRI" target="_blank">video documental</a> sobre cómo el turismo ha transformado Antigua Guatemala en una postal colonial para turistas.</p>
+El visitante admira sus iglesias sin saber que muchas fueron construidas sobre sitios sagrados indígenas, se toman fotos de los arcos coloniales sin preguntarse a quién se obligó a levantar esos muros, así, el turismo transforma el dolor en un atractivo más, y convierte el silencio en parte de la experiencia. Quiero aclarar que en mi opinión, el problema no es que Antigua sea bella, el problema es que su belleza se narra sin memoria crítica, sin contexto histórico, sin dignidad para quienes la habitaron primero.   <p>Podés ver un video relacionado aquí: 
+<a href="https://www.youtube.com/watch?v=Oj0CGI2bQDU" target="_blank" rel="noopener noreferrer">
+https://www.youtube.com/watch?v=Oj0CGI2bQDU
+</a></p>
+
 
 
 
@@ -75,8 +79,21 @@ El visitante admira sus iglesias sin saber que muchas fueron construidas sobre s
 
 <section>
     <h2>2. San Juan Atitán: Una vida fuera del escaparate</h2>
-    <p>San Juan Atitán, un pequeño municipio en Huehuetenango, parece existir fuera del circuito turístico. Aquí se habla Mam, se cocina con leña y se teje con telar de cintura. No es una réplica para turistas, es una comunidad viva. La cultura no se muestra, se habita.</p>
-    <p>Esta forma de vida contrasta radicalmente con la presentación folclorizada del indígena en el mercado de Chichicastenango o Antigua. En palabras de Stuart Hall (1996), la etnicidad sin garantías es aquella que existe fuera de las estructuras oficiales, con una identidad que se resiste a ser reducida a mercancía. Este video sobre <a href="https://www.youtube.com/watch?v=CdI5NggCUu4" target="_blank">la cultura Mam en Guatemala</a> es un testimonio vivo de esa resistencia.</p>
+<h2>2. San Juan Atitán: Una vida fuera del escaparate</h2>
+<p>
+San Juan Atitán es un pequeño municipio en Huehuetenango que, a diferencia de los lugares turísticos como Antigua Guatemala, no vive pendiente del lente del turista. La vida aquí se mueve con otro ritmo: se habla Mam, se cocina en comales de leña, se teje con el telar de cintura, y se vive una cotidianidad que resiste silenciosamente a la folklorización del turismo masivo.
+</p>
+<p>
+Al caminar por sus calles no hay souvenirs, no hay fachadas restauradas para Instagram. Hay tierra, humo de cocina, y rostros que cuentan historias más profundas que cualquier museo. Lo que aquí se vive no está pensado para ser exhibido ni empaquetado como “experiencia cultural”; es, simplemente, vida en su forma más digna y resistente.
+</p>
+<p>
+En palabras de Stuart Hall (1996), “la identidad cultural no es algo fijo, sino una narración en construcción”. Y San Juan Atitán narra una historia diferente: una que no está contada desde la mirada colonial, sino desde el vivir indígena cotidiano. Frente al silencio que impone el turismo sobre las voces originarias, este pueblo es un ejemplo de resistencia simbólica y material. Su lengua sigue viva, su tejido sigue contando, su gente sigue haciendo memoria.
+</p>
+<p>
+Este video ofrece un testimonio visual sobre esa vida apartada de los circuitos turísticos: 
+<a href="https://www.youtube.com/watch?v=Oj0CGI2bQDU" target="_blank">https://www.youtube.com/watch?v=Oj0CGI2bQDU</a>
+</p>
+
     <img src="271C0011-0C91-4EFD-AC5C-3B15063CF751.jpeg" alt="Tejido en San Juan Atitán">
     <div class="caption">El tejido no es sólo técnica; es también transmisión de saberes, identidad, memoria.</div>
 </section>
