--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ Maldonado-Torres (2007) habla de la colonialidad del ser como la forma en que la
 
 Como lo plantea Quijano (2000), el problema no es solo histórico, sino estructural, la colonialidad del poder organiza el presente, jerarquiza lo europeo como deseable, como lo mejor y convierte las huellas coloniales en atracción económica, Antigua es símbolo de cómo se celebra la herencia colonial sin cuestionarla, de cómo se comercializa la memoria sin repararla.
 
-El visitante admira sus iglesias sin saber que muchas fueron construidas sobre sitios sagrados indígenas, se toman fotos de los arcos coloniales sin preguntarse a quién se obligó a levantar esos muros, así, el turismo transforma el dolor en un atractivo más, y convierte el silencio en parte de la experiencia. Quiero aclarar que en mi opinión, el problema no es que Antigua sea bella, el problema es que su belleza se narra sin memoria crítica, sin contexto histórico, sin dignidad para quienes la habitaron primero.   <p>Podés ver más sobre este tema en este <a href="https://www.youtube.com/watch?v=qLNm6YOImdg" target="_blank">video documental sobre Antigua Guatemala</a>.</p>
+El visitante admira sus iglesias sin saber que muchas fueron construidas sobre sitios sagrados indígenas, se toman fotos de los arcos coloniales sin preguntarse a quién se obligó a levantar esos muros, así, el turismo transforma el dolor en un atractivo más, y convierte el silencio en parte de la experiencia. Quiero aclarar que en mi opinión, el problema no es que Antigua sea bella, el problema es que su belleza se narra sin memoria crítica, sin contexto histórico, sin dignidad para quienes la habitaron primero.   <p>Mirá este <a href="https://www.youtube.com/watch?v=rrJjHNh-TK8" target="_blank">video sobre el idioma Mam</a>.</p>
+
 
 
 
